# frontierai.solutions

./: .gitignore  README.md  azure.yaml
.devcontainer/: devcontainer.json  setup.sh
.github/: copilot-instructions.md
.github/agents/: backend-test-specialist.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  TEST_COVERAGE_REPORT.md  pyproject.toml
backend/app/: config.py  main.py  redis_client.py  story_scraper.py  websocket_handler.py
backend/data/: README.md  catalog.json  categories.json  content.json  settings.json  solutions.json
backend/scripts/: export_redis_to_backup.py
backend/tests/: README.md  __init__.py  conftest.py  test_config.py  test_main.py  test_redis_client.py  test_story_scraper.py  test_websocket_handler.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml
frontend/scripts/: migrate-to-redis-and-backup.ts
frontend/src/: App.tsx
frontend/src/components/avatar/: AvatarModal.tsx
frontend/src/components/explore/: ExploreModal.tsx
frontend/src/components/inspire/: InspireModal.tsx
frontend/src/components/ui/: Dropdown.tsx
frontend/src/data/: functionsData.ts  rolesData.ts
frontend/src/hooks/: useRealtime.tsx  useRecorder.tsx  useWebRTC.tsx
frontend/src/services/: api.ts
infra/: abbreviations.json  main.bicep  main.parameters.json  resources.bicep
infra/core/host/: container-app.bicep  container-apps.bicep
